--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,11 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.6.0'
 
 
+    // FirebaseUI for Cloud Firestore
+    implementation 'com.firebaseui:firebase-ui-firestore:8.0.2'
+
+
+
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
     implementation(platform("com.google.firebase:firebase-bom:32.1.1"))
     implementation 'com.google.android.gms:play-services-auth:20.6.0'
