addpost code/adapter/model

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,11 @@
 pluginManagement {
     repositories {
         google()
-        mavenCentral()
         gradlePluginPortal()
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
+
+
     }
 }
 dependencyResolutionManagement {
@@ -10,6 +13,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
+
     }
 }
 rootProject.name = "Chandara CommuniTask"
