--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
 
 
-    implementation 'com.google.android.gms:play-services-analytics:18.0.3'
+
 
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.3.0'
@@ -62,10 +62,14 @@ dependencies {
     // FirebaseUI for Cloud Firestore
     implementation 'com.firebaseui:firebase-ui-firestore:8.0.2'
 
+    implementation 'com.karumi:dexter:6.2.3'
+
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    implementation 'com.github.bfrachia:android-image-cropper:2.7.0'
+
+    implementation("com.vanniktech:android-image-cropper:4.5.0")
 
 
-    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
-    implementation(platform("com.google.firebase:firebase-bom:32.1.1"))
     implementation 'com.google.android.gms:play-services-auth:20.6.0'
     implementation 'com.google.android.gms:play-services-identity:18.0.1'
 
