--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,11 +9,11 @@ plugins {
 android {
     namespace 'com.jeysi.chandaracommunitask'
     compileSdk 33
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.jeysi.chandaracommunitask"
-        minSdk 19
+        minSdk 21
         targetSdk 33
         multiDexEnabled true
         versionCode 1
@@ -29,6 +29,8 @@ android {
         }
     }
 
+    //
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -42,14 +44,12 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
-
     implementation 'androidx.multidex:multidex:2.0.1'
 
+    implementation 'com.google.android.exoplayer:exoplayer:2.19.0'
 
-
-
-    implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    //implementation 'androidx.cardview:cardview:1.0.0'
+    //implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
 
     implementation 'com.google.firebase:firebase-auth:22.1.0'
@@ -64,21 +64,26 @@ dependencies {
 
     implementation 'com.karumi:dexter:6.2.3'
 
-    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
-    implementation 'com.github.bfrachia:android-image-cropper:2.7.0'
-
-    implementation("com.vanniktech:android-image-cropper:4.5.0")
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.4.7'
 
 
-    implementation 'com.google.android.gms:play-services-auth:20.6.0'
-    implementation 'com.google.android.gms:play-services-identity:18.0.1'
+    implementation 'com.github.MarsadMaqsood:StylishDialogs:1.0.0'
+    //implementation 'com.github.bfrachia:android-image-cropper:2.7.0'
+
+    //implementation("com.vanniktech:android-image-cropper:4.5.0")
+
+
+    //implementation 'com.google.android.gms:play-services-auth:20.6.0'
+    //implementation 'com.google.android.gms:play-services-identity:18.0.1'
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'com.github.a914-gowtham:android-video-trimmer:1.7.15'
 }
 
