--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,35 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/applogo"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/applogo"
         android:supportsRtl="true"
-        android:requestLegacyExternalStorage="true"
         android:theme="@style/AppTheme"
         tools:targetApi="31">
+        <activity
+            android:name=".FragmentReplaceActivity"
+            android:exported="false" />
+        <activity
+            android:name=".chat.ChatActivity"
+            android:exported="true" />
+        <activity
+            android:name=".ViewStoryActivity"
+            android:exported="true" />
+        <activity android:name=".StoryAddActivity" />
+        <activity
+            android:name=".PostViewActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
 
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data
+                    android:host="firebasestorage.googleapis.com"
+                    android:scheme="https" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".SplashActivity1"
             android:exported="true">
@@ -27,12 +50,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FragmentReplaceActivity" />
         <activity
             android:name=".SplashActivity2"
             android:exported="true" />
-        <activity android:name=".fragments.LoginFragment" />
-        <activity android:name=".fragments.CreateAccountFragment" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -42,10 +62,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
 
 </manifest>
