--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,9 @@ pluginManagement {
         google()
         gradlePluginPortal()
         mavenCentral()
+        jcenter()
         maven { url 'https://jitpack.io' }
+        //repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
 
 
     }
@@ -13,6 +15,7 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        jcenter()
         maven { url 'https://jitpack.io' }
 
     }
